add deployment md

--- a/kubernetes/控制器/1.ReplicaSet控制器.md
+++ b/kubernetes/控制器/1.ReplicaSet控制器.md
@@ -9,12 +9,17 @@ Kubernetes 控制器会监听资源的 <font color='green'>创建/更新/删除<
 ### ReplicSet
 
 ```
-ReplicatSet(RS)的主要作用就是维持一组pod副本的运行，保证一定数量的pod在集群中正常运行，ReplicatSet控制器会持续监听它所控制的pod的运行状态，在pod发送故障数量减少或者增加时会触发协调过程，始终保持副本数量与预设值相符
+ReplicaSet(RS)的主要作用就是维持一组pod副本的运行，保证一定数量的pod在集群中正常运行，ReplicatSet控制器会持续监听它所控制的pod的运行状态，在pod发送故障数量减少或者增加时会触发协调过程，始终保持副本数量与预设值相符
+replicas：数值表示期望的pod的副本数量
+selector：labelSelector，用来匹配要控制的Pod标签，需要和下面的template的中的标签一致
+template：pod模版，实际上就是定义pod的内容，相当于把一个pod的描述信息以模版的形式嵌入到了replicaset中去
 ```
 
+<img src="../img/replicaSet.jpg" alt="replicaSet" style="zoom:50%;" />
 
 
 
+#### ReplicaSet的功能为控制副本数量
 
 
 
