--- a/kubernetes/控制器/3.StatefulSet控制器.md
+++ b/kubernetes/控制器/3.StatefulSet控制器.md
@@ -20,13 +20,16 @@ StatefulSet可以处理Pod的启动顺序，为保留每个Pod的状态设置唯
 
 
 
+### StatefulSet 控制器创建 
 
+```
+需要创建对应的 svc  pv  pvc
+并且需要一一相互对应
 
+StatefulSet中pod副本的创建会按照序列号升序处理，副本的更新和删除则会按照降序处理
+```
 
-
-
-
-
+<img src=../img/statefulset.jpg style="zoom:78%;" />
 
 
 
