--- a/kubernetes/pod/2.pod生命周期.md
+++ b/kubernetes/pod/2.pod生命周期.md
@@ -27,7 +27,7 @@ pod的状态定义在 PodStatus 对象中，phase 字段对应着所有的描述
 ```
 通过配置 restartPolicy 字段来设置Pod中所有容器的重启策略，其值可能为：Always，OnFailure，Never
 
-不同类型的控制其可以控制Pod的重启策略
+不同类型的控制器可以控制Pod的重启策略
 job：适用于一次性任务，任务结束后Pod会被此类控制器清除，job的重启策略只能是 OnFailure 或 Never
 Replication Controller, ReplicaSet, Deployment：此类控制器希望 Pod 一直运行下去，它们的重启策略只能是 Always
 DaemonSet：每个节点上启动一个 Pod，很明显此类控制器的重启策略也应该是 Always
