add configmap secret

--- a/kubernetes/配置管理/1.ConfigMap.md
+++ b/kubernetes/配置管理/1.ConfigMap.md
@@ -6,3 +6,14 @@
 
 
 
+### 使用
+
+```
+1.设置环境变量的值
+2.在容器里设置命令行参数
+3.在数据卷里挂载配置文件
+```
+
+
+
+只有通过Kubernetes API创建的Pod才能使用ConfigMap，其他方式创建的(比如静态Pod)不能使用；ConfigMap文件大小限制为1MB(ETCD的要求)。
