--- a/kubernetes/网络配置管理/1.Service服务.md
+++ b/kubernetes/网络配置管理/1.Service服务.md
@@ -21,7 +21,53 @@ Kubernetes系统中的三种IP
 
 
 
+### kube-proxy
 
+在Kubernetes集群中，每个node都会运行一个kube-proxy进程，负责为Service实现一种VIP(虚拟IP，也就是所谓的ClusterIP)的代理形式，默认使用iptables的模式来代理
+
+> **iptables**
+>
+> kube-proxy会watch ApiServer对Service对象和Endpoints对象的添加和移除。对每个Service，它会添加上iptables规则从而捕获到达该Service的clusterIP(虚拟IP)和端口的请求，进而将请求重定向到Service的一组Backend中的某一个Pod上面，还可以使用<font color='green'>**Pod readiness探针**</font>验证后端Pod可以正常工作，以便iptables模式下的kube-proxy仅看到测试正常的后端，避免将流量通过kube-proxy发送到以知的pod中，所以对于线上的应用一定要做readiness探针
+>
+> <font color=green>iptables模式的kube-proxy默认策略是：随机选择一个后端的Pod</font>
+
+<img src=../img/svc-2.jpg style="zoom:45%;" />
+
+
+
+> **ipvs**
+>
+> 在ipvs模式下，kube-proxy watch Kubernetes服务和端点，调用netlink接口相应地创建IPVS规则，并定期将IPVS规则与Kubernetes服务和端点同步，该控制循环可确保IPVS状态与所需状态匹配。访问服务时，IPVS将流量定向到后端pod之一
+>
+> IPVS提供了更多选项来平衡后端Pod的流量，默认是rr，通过kube-proxy中ipvs-scheduler参数来实现配置
+>
+> ​	rr：round-robin
+>
+> ​	lc：least connection(smallest number of open connection)
+>
+> ​	dh：destination hashing
+>
+> ​	sh：source hashing
+>
+> ​	sed：shortest expected delay
+>
+> ​	nq：never queue
+
+<img src=../img/svc-3.jpg style="zoom:45%;" />
+
+
+
+### Service
+
+```
+ClusterIP：通过集群的内部IP暴露服务，选择该值，服务只能够在集群内部可以访问，默认服务类型
+
+NodePort：通过每个Node节点上的IP和静态端口(NodePort)暴露服务。NodePort服务会路由到ClusterIP服务，这个ClusterIP服务会自动创建。通过请求 NodeIP:NodePort，可以从集群的外部访问一个NodePort服务
+
+LoadBanlancer：使用云提供商的负载均衡器，可以向外暴露服务，外部的负载均衡器可以路由到NodePort服务和ClusterIP服务。这个需要结合具体的云厂商进行操作
+
+ExternalName：通过返回CNAME和它的值，可以将服务映射到externalName字段的内容(PS：foo.bar.example.com)
+```
 
 
 
